- Made gui reactive
- Removed content from front boxes

- Added onclick to boxes

- Handling system exit error on eel.start

--- a/web/css/bedit.css
+++ b/web/css/bedit.css
@@ -8,16 +8,21 @@ body::-webkit-scrollbar {
 }
 
 .section {
-    height: inherit;
+    height: 100vh;
     overflow: scroll;
 }
 
-.card-image
-{
+.card-image {
     max-height: 250px;
     overflow: hidden;
 }
 
 .alwaysActive {
     display: block!important;
+}
+
+.modal-content {
+    height: 80vh;
+    width: 80vw;
+    overflow-x: hidden;
 }
