Added video support in the app using symlink
Catch works only with elevated privilages on windows

--- a/web/css/bedit.css
+++ b/web/css/bedit.css
@@ -26,3 +26,11 @@ body::-webkit-scrollbar {
     width: 80vw;
     overflow-x: hidden;
 }
+
+.is-clickable:hover {
+    cursor: pointer;
+}
+
+.is-no-focus:focus {
+    outline: none!important;
+}
